--- a/cardsAgainstRhythmGames/youSuckAtRhythmGames.json5
+++ b/cardsAgainstRhythmGames/youSuckAtRhythmGames.json5
@@ -1,1 +1,856 @@
 
+{
+  "name": "You suck at rhythm games 2.0",
+  "language": "en-US",
+  "author": "General_hi_ping",
+  "calls": [
+    [
+      [
+        "Rayark announces a new Cytus 2 character:",
+        {}
+      ],
+      [
+        "but with",
+        {}
+      ]
+    ],
+    [
+      [
+        "All I want for Christmas is",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        "My new debut name when I joins BOFXVIII is",
+        {},
+        "  "
+      ]
+    ],
+    [
+      [
+        {},
+        " good luck asking Konami for that"
+      ]
+    ],
+    [
+      [
+        "A sign someone played too much osu! is",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        "Goddamn I love",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        "When a man asks for Bamboo Girl R34, give them",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        "And in that light I found ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Your brain on",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        {},
+        ": if you can"
+      ]
+    ],
+    [
+      [
+        "Cosmo@BosouP's sequel to ForUltraplyers: For",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        "It turns out that Altale lore is just",
+        {},
+        " having an orgams with  ",
+        {}
+      ]
+    ],
+    [
+      [
+        "New voice actor for boyfriend from Friday Night Funkin:",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        "In order to appeal to China, Lowiro decided to include ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Chris 1 - 0 Fefemz finishing move:",
+        {}
+      ]
+    ],
+    [
+      [
+        "Gutiar Hero failed not because of a changing landscape but because of",
+        {}
+      ]
+    ],
+    [
+      [
+        "If you like ",
+        {},
+        " then HOLY SHIT TOUCH SOME GRASS!"
+      ]
+    ],
+    [
+      [
+        "Please stop",
+        {}
+      ]
+    ],
+    [
+      [
+        "\"You see your father Laur have something no man have. Which is",
+        {},
+        "\""
+      ]
+    ],
+    [
+      [
+        "Guide to plagarize rhythm game artists:"
+      ],
+      [
+        "Step 1. Pick a song"
+      ],
+      [
+        "Step 2.",
+        {}
+      ],
+      [
+        "Step 3.",
+        {}
+      ],
+      [
+        "Step 4. Get cancelled"
+      ]
+    ],
+    [
+      [
+        {},
+        "good luck asking Rayark for that"
+      ]
+    ],
+    [
+      [
+        {},
+        "and that's how t+pazolite get his MV idea"
+      ]
+    ],
+    [
+      [
+        "Xi stopped responding to discord message because people keep spamming him",
+        {}
+      ]
+    ],
+    [
+      [
+        {},
+        "+",
+        {},
+        "=",
+        {}
+      ]
+    ],
+    [
+      [
+        "LeaF's next fucked up thing in her MV is",
+        {}
+      ]
+    ],
+    [
+      [
+        "Break News: Kurokotei's submission to BOFXVII is disqualified because of",
+        {}
+      ]
+    ],
+    [
+      [
+        "#fffff record's name is inspired by",
+        {}
+      ]
+    ],
+    [
+      [
+        "If you think Sotark's maps were terrible then you clearly haven't tried",
+        {}
+      ]
+    ],
+    [
+      [
+        "The key to a good BMS submission is a good song, good BGM and finally",
+        {}
+      ]
+    ],
+    [
+      [
+        "BOF is trying to rebrand themselves into BMS of",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        "The government knows when you're",
+        {}
+      ]
+    ],
+    [
+      [
+        "Vaxei broke new grounds in osu! when he's the first player to",
+        {}
+      ]
+    ],
+    [
+      [
+        "Analysis and Qualitative Effects of",
+        {},
+        "  on Aerodynamic Performance"
+      ]
+    ],
+    [
+      [
+        "New Yuki Aims requirement for osu player: ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Camellia to Nanahira is like ",
+        {},
+        " to ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Rissyu to Chokko is like ",
+        {},
+        " to ",
+        {}
+      ]
+    ],
+    [
+      [
+        "What makes Through the Fire and Flame hard is not because of",
+        {},
+        " but rather ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Rhythm games has become a masochist's dream thanks to ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Dear, Mr.",
+        {}
+      ]
+    ],
+    [
+      [
+        "Diverse System's new release for 2021"
+      ],
+      [
+        "AD:",
+        {}
+      ]
+    ],
+    [
+      [
+        "Thanks to ",
+        {},
+        " arcades have never been more accessible"
+      ]
+    ],
+    [
+      [
+        "The rating between \"Bad\" and \"Miss\" is now ",
+        {}
+      ]
+    ],
+    [
+      [
+        "When running out of ideas, Camellia can always find count on ",
+        {}
+      ]
+    ],
+    [
+      [
+        "The key to a sightread FC is ",
+        {}
+      ]
+    ],
+    [
+      [
+        "I can no longer enjoy",
+        {},
+        " because of ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Not just ",
+        {},
+        " but ",
+        {},
+        " is also needed for true happiness"
+      ]
+    ],
+    [
+      [
+        "After a month of praticing on ",
+        {},
+        ", I am now ready for ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Brought to you by ",
+        {},
+        " the official distributor for ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Daddy, why is mummy crying? ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Mummy, why is daddy crying? ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Introducing a hot new rhythm game music genre: ",
+        {},
+        "core"
+      ]
+    ],
+    [
+      [
+        "SDVX VII:",
+        {}
+      ]
+    ],
+    [
+      [
+        "A girl's worth is solely determined by",
+        {},
+        " "
+      ]
+    ],
+    [
+      [
+        "Project Diva's newest boss song requires ",
+        {},
+        " while getting all perfect"
+      ]
+    ],
+    [
+      [
+        "The only way to combat pp farming is ",
+        {}
+      ]
+    ],
+    [
+      [
+        "To one up last year's 666 during KAC, the tiebreaker chart this year is ",
+        {}
+      ]
+    ],
+    [
+      [
+        "The reason why wac doesn't put out a new album is because of ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Jun Wakita has cemented himself as one of Konami's legendary artist with ",
+        {}
+      ]
+    ],
+    [
+      [
+        "IIDX new Kaiden dan now involves ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Since infinite dan is too easy, SDVX introduced Aleph-1 dan which involves ",
+        {}
+      ]
+    ],
+    [
+      [
+        "The secret ingredient to Sakuzyo's songs is ",
+        {}
+      ]
+    ],
+    [
+      [
+        "The sequel to Pump it Up XX is confirmed to be Pump it Up XXI: ",
+        {}
+      ]
+    ],
+    [
+      [
+        "TRIGGER WARNING:",
+        {}
+      ]
+    ],
+    [
+      [
+        "ABC Present: ",
+        {},
+        " the story of ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Wait, LeaF is a girl? I always thought she's ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Trump's final act as president is ",
+        {}
+      ]
+    ],
+    [
+      [
+        "After hurricane Katrina, the people of New Orleans is blessed with a support packge of ",
+        {}
+      ]
+    ],
+    [
+      [
+        "And the academy award for ",
+        {},
+        " goes to ",
+        {}
+      ]
+    ],
+    [
+      [
+        {},
+        ", can't have just one!"
+      ]
+    ],
+    [
+      [
+        "Check it out, I call this dance move ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Dear Sir or Madam, we regret to inform you that the Office of ",
+        {},
+        " have denied your request for ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Due to a PR nightmare, Round 1 no longer provides ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Due to a PR nightmare, Konami decided to stop providing ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Tired of ",
+        {},
+        "? Try ",
+        {},
+        "!"
+      ]
+    ],
+    [
+      [
+        "How did I lose my virginity? ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Why am I not getting any girls? ",
+        {}
+      ]
+    ],
+    [
+      [
+        "I drink to forget ",
+        {}
+      ]
+    ],
+    [
+      [
+        "I never truly understood ",
+        {},
+        " until I encountered ",
+        {}
+      ]
+    ],
+    [
+      [
+        "Funding for this program was made possible by ",
+        {}
+      ]
+    ],
+    [
+      [
+        "KAC banned ",
+        {},
+        " for giving players an unfair advantage"
+      ]
+    ],
+    [
+      [
+        "\"Babe, come over\""
+      ],
+      [
+        "\"Can't I'm busy\""
+      ],
+      [
+        "\"",
+        {},
+        "\""
+      ],
+      [
+        "\"Say no more\""
+      ]
+    ],
+    [
+      [
+        "It’s a beautiful day outside. Birds are singing, flowers are blooming. On days like these, kids like you…should be ",
+        {},
+        "."
+      ]
+    ],
+    [
+      [
+        {},
+        ". This is the answer to all of life’s questions."
+      ]
+    ],
+    [
+      [
+        "Shit missing on a song? Blame it on ",
+        {},
+        "!"
+      ]
+    ],
+    [
+      [
+        "Now's your change to be a ",
+        {},
+        "!"
+      ]
+    ]
+  ],
+  "responses": [
+    "New Katagiri song",
+    "Frums turning straight",
+    "Voez's monetization system",
+    "Nanahira at 50 years old",
+    "Hai on the strong beat",
+    "Hai on the offbeat",
+    "Xi Jinping showing up while searching for xi",
+    "Deleting skin.ini",
+    "Katagiri winning BOF",
+    "Accidentally playing Haitai at a funeral",
+    "Challenging a handicap person to a DDR match",
+    "Bamboo girl R34",
+    "Rissyu producing something normal for once",
+    "Deliverance",
+    "O-oooooooooo AAAAE-A-A-I-A-U- JO-oooooooooooo AAE-O-A-A-U-U-A- E-eee-ee-eee AAAAE-A-E-I-E-A-JO-ooo-oo-oo-oo ",
+    "Super Idol de xiao rong dou mei ni de tian ba yue zhengwu de yangguang dou mei ni yaoyan re’ai 105 °C de ni di di qingchun de zhengliushui",
+    "Obama Scramble",
+    "t+pazolite fucking a shark",
+    "Kobairo",
+    "Sakuzyo's square dick",
+    "Linear ring getting negative social credit",
+    "wissy",
+    "Picking Tsukinami in a multi lobby for the 10,000th fucking time",
+    "Camellia marrying Nanahira",
+    "DJ Sharpnel's questionably aged girls on the album cover",
+    "Freedom Dive's cheap knockoff",
+    "Changing gender at 727 BPM",
+    "A monetization system that doesn't suck",
+    "A DLC within a DLC",
+    "Catgirl with big booba",
+    "Playing Harumachi Clover for the 5,000th time hoping you'll improve",
+    "Meth",
+    "LeaF spiralling into madness",
+    "Shigetora's left hand",
+    "Frums' half broken radio",
+    "Chuck E Cheese Pump it Up kids machine",
+    "10k mania masochists",
+    "Normies amazed by a 87% acc on a 3.5 star map",
+    "Pictured as shit",
+    "Muse Dash Booba",
+    "Ohio State University",
+    "A license plate that contains 727",
+    "Asians who aren't good at rhythm games",
+    "A disappointing arcade trip",
+    "Playing Beat Saber naked",
+    "Actually playing Catch the Beat",
+    "White people trying to look cool on a Dancerush machine",
+    "Driving people crazy while tapping a rhythm game song in your head",
+    "Sad elitist who wasted their time clicking circles",
+    "Camellia's Fursona",
+    "Bamboo girl's bamboo army",
+    "A gangbang with the Punai Punai Seiso girls",
+    "Going into financial hardship to buy Rhythm Games cabs",
+    "A scarily large amount of rhythm games controller",
+    "Mr. Tanaka's overpriced sword",
+    "Having an unhealthy obsession with Bamboo Girl",
+    "Hentai background art in an osu! map",
+    "The acid trip of a BMS chart's background video",
+    "Mope mope plant crawling up your leg while you're sleeping",
+    "Being too broke to buy DLC",
+    "That DDR machine in your local pizza place with a pad that barely works",
+    "Beating Da Don's Taiko ass",
+    "Tanaka girl dancing",
+    "Camellia's fursona",
+    "LeaF composing in 4/4 for once",
+    "Hitting a great on the first note with during Encore Extra Stage",
+    "Sobrem lurking in people's discord",
+    "Getting another fucking Crossing Deltra collab",
+    "Surrendering all your mortal possession for Tanaka girl",
+    "Rissyu failing to get first in a BMS for 4 years straight",
+    "Litmus*'s fat ass",
+    "Getting 90% collection rate on Grievous Lady before accidentally overwriting your save data",
+    "Being a 7 digit scrub",
+    "DT farming the Teletubbies theme song",
+    "Hugging a sweaty Chris4Life after he played Max 360 at KAC",
+    "び",
+    "Badly time DDR charts",
+    "Bag on 1x",
+    "Putin's Boner",
+    "Getting sniped",
+    "Through the Fires and Flames",
+    "208 key mania",
+    "Actually producing good music",
+    "Mope Mope plushes being abused on LeaF's twitter",
+    "Finding out your favorite artist's gender is actually an 1860 Steam Powered Locomotive",
+    "Being a mother fucking flower",
+    "Going on a Marenol pill binge",
+    "Using a random number generator to set your BPM",
+    "Calling a Pump it Up machine \"DDR\"",
+    "Pretending to understand t+pazolite's music production tutorials",
+    "Catching Red Alice sending Pekora an aka supa",
+    "Catching Camellia donating $100 to Nyanners",
+    "ああああ being a furry",
+    "Being drunk out of your mind while listening to a Ginhika song",
+    "Jun Wakita's obsession with Baseball",
+    "Robeats players",
+    "Fucking Asians",
+    "The warmth of another human being",
+    "Crippling RSI",
+    "FnF Boyfriend giving birth",
+    "Dicking around with unranked map for an hour",
+    "My own fingers",
+    "Trying to sing Tanaka during an open mic",
+    "Finding out that Nanahira isn't 12 years old",
+    "Hai?",
+    "Being good at rhythm games",
+    "Being bad at rhythm games",
+    "Being good at rhythm games in exchange for a meaningful life",
+    "Being bad a rhythm game despite wasting your life playing it",
+    "Unironically introducing yourself as an osu! player",
+    "Stalking Dean Herbert",
+    "Dolce. on a week long cocain binge",
+    "OH MY GOD, TOY!",
+    "Rolling a 1 on a show match",
+    "pp cat",
+    "Miku collabing with Nicki Minaj",
+    "Unironically thinking that Blue Zenith is from osu!",
+    "Getting epilepsy from a Frums video",
+    "Getting epilepsy from a LeaF video",
+    "Getting epilepsy from ANY bms submission",
+    "Cheating on osu! standard",
+    "Cheating on 4k",
+    "Cheating on 7k",
+    "Relax cheating on Tik Tok",
+    "Touching children",
+    "Denying that you touch children",
+    "xQc trying out osu!",
+    "Pump It Up's dead server",
+    "DADADADADADADADADADA",
+    "Bamboo girl wielding a bamboo sword",
+    "A scuffed home BMS setup",
+    "FCing Through the Fire and Flames with wii nunchucks",
+    "No bar boomers",
+    "Pressing the button on the screen below",
+    "Using a bar on Dancerush",
+    "Double stepping like there's no tomorrow",
+    "竹",
+    "A 10 star song on Project Diva",
+    "An upbeat vocaloid song with fucked up lyrics",
+    "Buying the most expensive tablet for osu!",
+    "The B side incident",
+    "Camellia's incomprehensible song titles",
+    "200steps",
+    "Getting stepped on by devil Kureha",
+    "Having an unhealthy obsession for Hiyuki-chan",
+    "wac finally publishing a new album",
+    "Zhong Xina",
+    "4chan /vg/ board",
+    "Confusing BPM changes",
+    "Getting cancelled by CNN",
+    "Playing on a Dancerush cab with high heels",
+    "Playing on a DDR cab with high heels",
+    "Breaking a DDR pad and pretended that nothing happened",
+    "Kaiden Dan",
+    "SDVX doujinshi",
+    "Sex",
+    "Subtle Nazi symbolism",
+    "An argument on twitter",
+    "Alcohol Poisoning",
+    "A gay hat",
+    "A Fumo covered in cum",
+    "Anime figures covered in cum",
+    "Australia",
+    "Europe",
+    "Advertising as \"worldwide\" but available only at 3 countries",
+    "Being a dick to children",
+    "Being rich",
+    "Being White",
+    "Bing Chillin",
+    "Bullshitting my way through a chart",
+    "Mashing",
+    "Baby Powder on public DDR pads",
+    "Cock fights",
+    "Konami executives",
+    "Lowiro executives",
+    "Rayark executives",
+    "Corporate shills",
+    "Rayark Shills",
+    "The overworked underpaid charters at C4 Cat",
+    "Dick beanies",
+    "Diversity",
+    "Dying",
+    "Adderall",
+    "Ecstasy",
+    "Introverts",
+    "Extroverts",
+    "Facebook meme groups",
+    "Twitter meme pages",
+    "Dead rhythm game subreddits",
+    "Getting married, having a few kids, buying some stuff, retiring to Florida, and dying",
+    "Getting married, having a few kids, buying some stuff, retiring to Queensland, and dying",
+    "Getting married, having a few kids, buying some stuff, retiring near an arcade, and dying",
+    "Getting naked and play Dancerush",
+    "Getting naked and play Possession CSP",
+    "God",
+    "The bible",
+    "Anime",
+    "Hentai",
+    "How bad I fucked up my qualifiers",
+    "Incest",
+    "Italian plumbers",
+    "French",
+    "Stepping on children while playing doubles",
+    "The American Dream",
+    "Nuking Hiroshima",
+    "Song art of lewd questionably aged girls",
+    "Music Game Hell",
+    "Political Correctness",
+    "Burning in hell",
+    "Speed charting",
+    "Hacking your way to top 10",
+    "Furries",
+    "Femboy Furries",
+    "Vtuber",
+    "Vtuber playing rhythm games",
+    "Tuturu",
+    "Dense Harem MC",
+    "Overpriced FSR sensors",
+    "IIDX controller that's too small",
+    "A SDVX controller's dead knob",
+    "Arcade-poor areas",
+    "Normies playing Party Rock Anthem for the 3,847th time",
+    "A dirt filled internal of a pad",
+    "Being an actual witch's slave",
+    "Hastune Miku",
+    "Exiting this earth's Atomosphere without a spacesuit",
+    "Cubesato",
+    "Moe Moe Kyun",
+    "Bruh Sound effect",
+    "DM DOKURO's Hiatus",
+    "Ghost with 999 lanes in beat saber",
+    "Cum",
+    "Konami",
+    "SEGA",
+    "Hardcore Tano*C",
+    "Diverse System",
+    "Batman?",
+    "Getting a crowd while you're playing rhythm games",
+    "Nanahira's A cup boobs",
+    "Sidechaining",
+    "Geometry Dash Yiff",
+    "Darude - Sandstorm",
+    "Totally Normal ITG",
+    "XNOR XNOR XNOR but only the distortion part",
+    "Bamboobs",
+    "Using Bamboo as fleshlight",
+    "Black Magic Blaze-it",
+    "Big shot",
+    "Small shot",
+    "Showing off your score",
+    "Streaming for 1 person",
+    "A Japanese tourist who wants something very badly but cannot communicate it.",
+    "A Dakimakura reeking with cum",
+    "Bad Among Us jokes",
+    "Consent"
+  ]
+}
