Adding some new white card entries
 "Crippling hentai addiction",
    "An ego-crushing accuracy session",
    "LeaF turning into a vtuber",
    "Making a list of people to kill",
    "Mild racism and extreme homophobia",
    "Nothing. Absolutely nothing.",
    "Clearing GHOUL in beat saber with a pair of wii nunchucks",
    "One rude motherfucker",
    "BTMC simps doing a donation war",
    "Children running between you and the DDR screen while you're playing",
    "Linear Ring liking big boobas",
    "Basic human decency",
    "Spending a cumulative $11,235 worth of arcade credits"

--- a/cardsAgainstRhythmGames/youSuckAtRhythmGames.json5
+++ b/cardsAgainstRhythmGames/youSuckAtRhythmGames.json5
@@ -851,6 +851,19 @@
     "A Japanese tourist who wants something very badly but cannot communicate it.",
     "A Dakimakura reeking with cum",
     "Bad Among Us jokes",
-    "Consent"
+    "Consent",
+    "Crippling hentai addiction",
+    "An ego-crushing accuracy session",
+    "LeaF turning into a vtuber",
+    "Making a list of people to kill",
+    "Mild racism and extreme homophobia",
+    "Nothing. Absolutely nothing.",
+    "Clearing GHOUL in beat saber with a pair of wii nunchucks",
+    "One rude motherfucker",
+    "BTMC simps doing a donation war",
+    "Children running between you and the DDR screen while you're playing",
+    "Linear Ring liking big boobas",
+    "Basic human decency",
+    "Spending a cumulative $11,235 worth of arcade credits"
   ]
 }
