--- a/cardsAgainstRhythmGames/16thSanctuary.json5
+++ b/cardsAgainstRhythmGames/16thSanctuary.json5
@@ -1,1 +1,13 @@
 
+{
+  "name": "Rinnythe16th discord pack",
+  "language": "en-US",
+  "author": "General_hi_ping",
+  "calls": [
+ 
+  ],
+  "responses": [
+    
+  ]
+}
+
