--- a/cardsAgainstRhythmGames/16thSanctuary.json5
+++ b/cardsAgainstRhythmGames/16thSanctuary.json5
@@ -4,6 +4,10 @@
   "language": "en-US",
   "author": "General_hi_ping",
   "calls": [
+      [
+        "To get your artist request goes through, there's a secret step you need to do that is: ",
+        {}
+      ],
  
   ],
   "responses": [
