--- a/cardsAgainstRhythmGames/youSuckAtRhythmGames.json5
+++ b/cardsAgainstRhythmGames/youSuckAtRhythmGames.json5
@@ -6,24 +6,24 @@
   "calls": [
     [
       [
-        "Rayark announces a new Cytus 2 character:",
+        "Rayark announces a new Cytus 2 character: ",
         {}
       ],
       [
-        "but with",
+        "but with ",
         {}
       ]
     ],
     [
       [
-        "All I want for Christmas is",
+        "All I want for Christmas is ",
         {},
         " "
       ]
     ],
     [
       [
-        "My new debut name when I joins BOFXVIII is",
+        "My new debut name when I joins BOFXVIII is ",
         {},
         "  "
       ]
@@ -36,21 +36,21 @@
     ],
     [
       [
-        "A sign someone played too much osu! is",
+        "A sign someone played too much osu! is ",
         {},
         " "
       ]
     ],
     [
       [
-        "Goddamn I love",
+        "Goddamn I love ",
         {},
         " "
       ]
     ],
     [
       [
-        "When a man asks for Bamboo Girl R34, give them",
+        "When a man asks for Bamboo Girl R34, give them ",
         {},
         " "
       ]
@@ -63,7 +63,7 @@
     ],
     [
       [
-        "Your brain on",
+        "Your brain on ",
         {},
         " "
       ]
@@ -71,12 +71,12 @@
     [
       [
         {},
-        ": if you can"
+        " : if you can"
       ]
     ],
     [
       [
-        "Cosmo@BosouP's sequel to ForUltraplyers: For",
+        "Cosmo@BosouP's sequel to ForUltraplyers: For ",
         {},
         " "
       ]
@@ -85,13 +85,13 @@
       [
         "It turns out that Altale lore is just",
         {},
-        " having an orgams with  ",
+        " having an orgams with ",
         {}
       ]
     ],
     [
       [
-        "New voice actor for boyfriend from Friday Night Funkin:",
+        "New voice actor for boyfriend from Friday Night Funkin: ",
         {},
         " "
       ]
@@ -104,13 +104,13 @@
     ],
     [
       [
-        "Chris 1 - 0 Fefemz finishing move:",
+        "Chris 1 - 0 Fefemz finishing move: ",
         {}
       ]
     ],
     [
       [
-        "Gutiar Hero failed not because of a changing landscape but because of",
+        "Gutiar Hero failed not because of a changing landscape but because of ",
         {}
       ]
     ],
@@ -123,51 +123,51 @@
     ],
     [
       [
-        "Please stop",
+        "Please stop ",
         {}
       ]
     ],
     [
       [
-        "\"You see your father Laur have something no man have. Which is",
+        "\"You see your father Laur have something no man have. Which is ",
         {},
         "\""
       ]
     ],
     [
       [
-        "Guide to plagarize rhythm game artists:"
+        "Guide to plagarize rhythm game artists: "
       ],
       [
-        "Step 1. Pick a song"
+        "Step 1: Pick a song"
       ],
       [
-        "Step 2.",
+        "Step 2: ",
         {}
       ],
       [
-        "Step 3.",
+        "Step 3: ",
         {}
       ],
       [
-        "Step 4. Get cancelled"
+        "Step 4: Get cancelled"
       ]
     ],
     [
       [
         {},
-        "good luck asking Rayark for that"
+        " good luck asking Rayark for that"
       ]
     ],
     [
       [
         {},
-        "and that's how t+pazolite get his MV idea"
+        " and that's how t+pazolite get his MV idea"
       ]
     ],
     [
       [
-        "Xi stopped responding to discord message because people keep spamming him",
+        "Xi stopped responding to discord message because people keep spamming him ",
         {}
       ]
     ],
@@ -182,56 +182,56 @@
     ],
     [
       [
-        "LeaF's next fucked up thing in her MV is",
+        "LeaF's next fucked up thing in her MV is ",
         {}
       ]
     ],
     [
       [
-        "Break News: Kurokotei's submission to BOFXVII is disqualified because of",
+        "Break News: Kurokotei's submission to BOFXVII is disqualified because of ",
         {}
       ]
     ],
     [
       [
-        "#fffff record's name is inspired by",
+        "#fffff record's name is inspired by ",
         {}
       ]
     ],
     [
       [
-        "If you think Sotark's maps were terrible then you clearly haven't tried",
+        "If you think Sotark's maps were terrible then you clearly haven't tried ",
         {}
       ]
     ],
     [
       [
-        "The key to a good BMS submission is a good song, good BGM and finally",
+        "The key to a good BMS submission is a good song, good BGM and finally ",
         {}
       ]
     ],
     [
       [
-        "BOF is trying to rebrand themselves into BMS of",
+        "BOF is trying to rebrand themselves into BMS of ",
         {},
         " "
       ]
     ],
     [
       [
-        "The government knows when you're",
+        "The government knows when you're ",
         {}
       ]
     ],
     [
       [
-        "Vaxei broke new grounds in osu! when he's the first player to",
+        "Vaxei broke new grounds in osu! when he's the first player to ",
         {}
       ]
     ],
     [
       [
-        "Analysis and Qualitative Effects of",
+        "Analysis and Qualitative Effects of ",
         {},
         "  on Aerodynamic Performance"
       ]
@@ -260,7 +260,7 @@
     ],
     [
       [
-        "What makes Through the Fire and Flame hard is not because of",
+        "What makes Through the Fire and Flame hard is not because of ",
         {},
         " but rather ",
         {}
@@ -274,7 +274,7 @@
     ],
     [
       [
-        "Dear, Mr.",
+        "Dear, Mr. ",
         {}
       ]
     ],
@@ -283,7 +283,7 @@
         "Diverse System's new release for 2021"
       ],
       [
-        "AD:",
+        "AD: ",
         {}
       ]
     ],
@@ -314,7 +314,7 @@
     ],
     [
       [
-        "I can no longer enjoy",
+        "I can no longer enjoy ",
         {},
         " because of ",
         {}
@@ -366,7 +366,7 @@
     ],
     [
       [
-        "SDVX VII:",
+        "SDVX VII: ",
         {}
       ]
     ],
@@ -434,7 +434,7 @@
     ],
     [
       [
-        "TRIGGER WARNING:",
+        "TRIGGER WARNING: ",
         {}
       ]
     ],
@@ -864,6 +864,9 @@
     "Children running between you and the DDR screen while you're playing",
     "Linear Ring liking big boobas",
     "Basic human decency",
-    "Spending a cumulative $11,235 worth of arcade credits"
+    "Spending a cumulative $11,235 worth of arcade credits",
+    "The robot in Altale",
+    "Hikari having a mental breakdown",
+    "The slow and painful descend into madness"
   ]
 }
