--- a/cardsAgainstRhythmGames/youSuckAtRhythmGames.json5
+++ b/cardsAgainstRhythmGames/youSuckAtRhythmGames.json5
@@ -594,7 +594,13 @@
         {},
         "!"
       ]
-    ]
+    ],
+    [
+      [
+        "I've just perfected ",
+        {}
+       ]
+     ]
   ],
   "responses": [
     "New Katagiri song",
@@ -867,6 +873,10 @@
     "Spending a cumulative $11,235 worth of arcade credits",
     "The robot in Altale",
     "Hikari having a mental breakdown",
-    "The slow and painful descend into madness"
+    "The slow and painful descend into madness",
+    "Paff x Neko Cytus 2 lesbian fanfic",
+    "Learning Japanese so you can ask nanahira what she thinks about bamboo girl",
+    "Spinning Phigros chart",
+    "Expecting nothing from Deemo 2 and yet somehow dissappointed"
   ]
 }
