--- a/cardsAgainstRhythmGames/16thSanctuary.json5
+++ b/cardsAgainstRhythmGames/16thSanctuary.json5
@@ -1,16 +1,44 @@
 
 {
-  "name": "Rinnythe16th discord pack",
+  "name": "Rinny the 16th discord",
   "language": "en-US",
-  "author": "General_hi_ping",
+  "author": "General Hi Ping",
   "calls": [
+    [
       [
-        "To get your artist request goes through, there's a secret step you need to do that is: ",
+        "To increase profit, you now have the option of ",
+        {},
+        " to improve the chance of your artist getting covered in the next HRGA"
+      ]
+    ],
+    [
+      [
+        "Nooooooo, don't delete ",
         {}
-      ] 
+      ]
+    ],
+    [
+      [
+        "Black card text with ",
+        {}
+      ]
+    ]
   ],
   "responses": [
-    
-  ]
+    "Spamming Casual multiplayer for the 100th time",
+    "Subscribing to Rinny's Only Fan",
+    "Deleting skin.ini",
+    "Amogus jokes",
+    "Le Fish Au Chocolat",
+    "Bamboo girl cult",
+    "Founding out that Eris is a boomer",
+    "Doxxing people based on timezone",
+    "Mistaking Poland for Indonesia for the 14th time",
+    "gentu vs Lot A epic drawing battle",
+    "Mistaking Lot A for Lote",
+    "Audiophiles",
+    "Still not knowing Cl4ocky's time zone",
+    "Missing Rinny's ping for a Mania multi lobby :(",
+    "Coming to the realization that some people here just don't sleep"
+    ]
 }
-
