--- a/cardsAgainstRhythmGames/16thSanctuary.json5
+++ b/cardsAgainstRhythmGames/16thSanctuary.json5
@@ -1,8 +1,7 @@
-
 {
-  "name": "Rinny the 16th discord",
+  "name": "Rinny the 16th discord pack",
   "language": "en-US",
-  "author": "General Hi Ping",
+  "author": "General_hi_ping",
   "calls": [
     [
       [
@@ -19,7 +18,26 @@
     ],
     [
       [
-        "Black card text with ",
+        "Rinnythe16th has turned into a cult, and it's all thanks to ",
+        {}
+      ]
+    ],
+    [
+      [
+        "New series on the Rinnythe16th channel: ",
+        {}
+      ]
+    ],
+    [
+      [
+        "If General Hi Ping can stop ",
+        {},
+        " that would be great"
+      ]
+    ],
+    [
+      [
+        "Since spamming on #shameless-plug no longer work, contnent creator resorted to ",
         {}
       ]
     ]
@@ -39,6 +57,38 @@
     "Audiophiles",
     "Still not knowing Cl4ocky's time zone",
     "Missing Rinny's ping for a Mania multi lobby :(",
-    "Coming to the realization that some people here just don't sleep"
-    ]
+    "Coming to the realization that some people here just don't sleep",
+    "Lote's unhealthy obsession with Frums",
+    "People losing their mind when Telestro joined the server",
+    "Eris simping for GRYSCL",
+    "Jumping straight into 5 stars vibro map on your 3rd day of playing osu!mania",
+    "Damian's r/ihaveastroke worthy typo",
+    "Damian's 3rd alt account",
+    "Converting CyNocz into the rhythm game cult one by one",
+    "Siamese's poor financial decisions",
+    "Spending $299 on a balisong and calling it \"budget\"",
+    "Aegelseeker but bruh",
+    "Rinni ball",
+    "Kobairo spinning ball",
+    "The cult of bamboo girl",
+    "Spamming greeting sticker",
+    ":deemolurk:",
+    "Calling arcades with jubeat machine \"not that great\"",
+    "Founding out how many pros player are in the server",
+    "Megamind Elevator Downvote Ratio'd based obama sex",
+    "Getting personal with insults on jackbox",
+    "Bing Chillin",
+    "Jord starring at Nanahira's twitter profile for 4 hours",
+    "竹",
+    "Tanaka cult",
+    "Using a heavy object to hold down the push to talk button",
+    "Cursed topic/invention during game night",
+    "Siamese's bot turning to be a Ukrainian ransomware",
+    "nanahira148342",
+    "Dead jokes",
+    "Lote's questionable prompts during Gartic Phone",
+    "Gentu's cursed obs layout",
+    "Rinny and Eris bromance",
+    "Super Idol的笑容都没你的甜八月正午的阳光都没你耀眼热爱105 °C的你滴滴清纯的蒸馏水"
+  ]
 }
